fix: Fix layout shift on using Select

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,6 +57,7 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+		@apply !min-w-full;
 	}
 	.hash-span {
 		margin-top: -100px;
